--- a/css/sections/_block_stages.scss
+++ b/css/sections/_block_stages.scss
@@ -314,7 +314,7 @@
 
 					.slide::before {
 						content: "";
-						background: url(/images/stages/sub_background.png) top/cover no-repeat;
+						background: url(./../images/stages/sub_background.png) top/cover no-repeat;
 						position: absolute;
 						width: 100%;
 						height: 100%;
